# ground-station-optimizer

./: .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  full_example.json  pyproject.toml
.streamlit/: config.toml
data/: celestrak_tles.txt
data/groundstations/: atlas.json  aws.json  azure.json  ksat.json  leaf.json  viasat.json
examples/: basic_milp.py  full_example.py  ksat_only_max_data_opt.py  max_data_opt.py  max_gap_opt.py  min_cost_opt.py  publication_max_gap_results.py  solution_analysis.ipynb
gsopt/: analysis.py  app.py  ephemeris.py  milp_constraints.py  milp_core.py  milp_objectives.py  milp_optimizer.py  models.py  optimizer.py  plots.py  scenarios.py  sim_analysis.py  sim_window_analysis.py  utils.py  widgets.py
gsopt/app/: app.py  widgets.py
gsopt/cli/: cli.py
tests/: test_scenarios.py
