[project]
name = "gsopt"
version = "0.0.1"
authors = [
  { name="Duncan Eddy", email="deddy@stanford.edu" },
]
description = "Ground Station Optimizer - A tool for analyzing and optimizing ground station providers and locations for satellite operators"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "brahe@git+https://github.com/duncaneddy/brahe.git@master",
    "streamlit>=1.3.6,<2.0.0",
    "stqdm>=0.0.5,<1.0.0",
    "watchdog>=4.0.1,<5.0.0",
    "polars>=1.0.0,<2.0.0",
    "matplotlib>=3.4.3,<4.0.0",
    "cartopy==0.23.0",
    "scipy>=1.14.0,<2.0.0",
    "plotly>=5.22.0,<6.0.0",
    "httpx>=0.27.0,<1.0.0",
    "pyomo>=6.7.3,<7.0.0",
    "gurobipy>=11.0.3,<12.0.0",
    "iudex>=0.12.0,<1.0.0",
]

# Add dev dependencies
[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/sisl/ground-station-optimizer"

[tool.setuptools]
packages = ["gsopt"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore" # This ignores the pydantic PydanticDeprecatedSince20 warning. A more precise filter would be better.
]